# ctis-drift-detector

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
src/ctis_drift/: __main__.py  cockpit.py  config.py  constants.py  main.py
src/ctis_drift/core/: ctis_api.py  ctis_mock_transport.py  ctis_public_client.py  drift_detector.py  storage.py
src/ctis_drift/ui/: __init__.py  app.py  bootstrap.py  sidebar.py  streamlit_env.py
src/ctis_drift/ui/pages/: api_explorer.py  drift_history.py  manage_trials.py  monitored_trials.py
src/ctis_drift/ui/utils/: __init__.py  caching.py  errors.py  session.py  theme.py
src/ctis_drift/utils/: helpers.py  logging.py
tests/: test_drift_detector.py  test_end_to_end.py  test_error_scenarios.py  test_mock_transport.py
